<resources>
    <string name="app_name">СarDataStorage</string>
    <string name="color">Color:</string>
    <string name="maxSpeed">Speed:</string>
    <string name="hp">Hp:</string>

    <string name="service_unavailable_message">Service unavailable</string>
    <string name="no_connection_message">No connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_cars_found">No cars found</string>
    <string name="try_again">Try again</string>
    <string name="sort_by_brand">Sort by brand</string>
    <string name="filter_by_speed">Filter by speed > 189</string>
    <string name="action_confirm">Confirm</string>
    <string name="enter_model">Enter model</string>
    <string name="enter_color">Enter color</string>
    <string name="enter_speed">Enter speed</string>
    <string name="enter_hp">Enter hp</string>
    <string name="action_cancel">Cancel</string>
    <string name="new_car">New car</string>
    <string name="empty_field">Empty field</string>
    <string name="fill_gaps">Fill in all the fields</string>
    <string name="no_database">Database is unavailable</string>
</resources>