<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_add"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="22dp"
        android:paddingTop="12dp"
        android:paddingEnd="22dp"
        android:paddingBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/modelInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/enter_model"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="22dp"
        android:paddingTop="12dp"
        android:paddingEnd="22dp"
        android:paddingBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/colorInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/enter_color"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="22dp"
        android:paddingTop="12dp"
        android:paddingEnd="22dp"
        android:paddingBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/speedInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/enter_speed"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="22dp"
        android:paddingTop="12dp"
        android:paddingEnd="22dp"
        android:paddingBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hpInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/enter_hp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>